prevent significance col from wrapping onto multiple lines

--- a/src/_scss/pages/modals/settings/_settingsModal.scss
+++ b/src/_scss/pages/modals/settings/_settingsModal.scss
@@ -67,6 +67,11 @@
             .fa-bars {
                 margin-right: rem(10);
             }
+            .settings-table__row {
+                &.settings-table__row_significance {
+                    white-space: nowrap;
+                }
+            }
         }
     }
 }
